--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,8 +194,8 @@ dependencies {
     implementation 'com.github.Baseflow:PhotoView:2.3.0'
 
     // Bugly 异常捕捉：https://bugly.qq.com/docs/user-guide/instruction-manual-android/?v=20190418140644
-    implementation 'com.tencent.bugly:crashreport:3.4.4'
-    implementation 'com.tencent.bugly:nativecrashreport:3.9.2'
+//    implementation 'com.tencent.bugly:crashreport:3.4.4'
+//    implementation 'com.tencent.bugly:nativecrashreport:3.9.2'
 
     // 上拉刷新下拉加载框架：https://github.com/scwang90/SmartRefreshLayout
     implementation 'com.scwang.smart:refresh-layout-kernel:2.0.3'
